# incubator2024

./: .gitignore  README.md  age_strat.ipynb  pyproject.toml
notebooks/: age_strat.ipynb  age_strat_ver2.ipynb  behaviour_check.ipynb  calibrate.ipynb  calibrate_with_configs.ipynb  calibration_results.ipynb  comp_assumptions_old.ipynb  compare_assumptions.ipynb  demo_vis.ipynb  demographic.ipynb  demographic_data.ipynb  demographics.ipynb  detection_scaleup_check.ipynb  generate_scenario_data.ipynb  indonesia_tb.ipynb  optimise.ipynb  output_ranges.ipynb  results.ipynb  scenarios.ipynb  spaghetti.ipynb  supplementary.ipynb  tb_refs.bib  test.ipynb  test_all.bib
supplementary/: tb_refs.bib
tb_incubator/: calibrate.py  constants.py  demographics.py  detection.py  input.py  model.py  outputs.py  parameters.yaml  plotting.py  reporting.py  reporting.yaml  scenario_utils.py  strat_age.py  strat_organ.py  targets.py  targets.yaml  utils.py
tb_incubator/data/: .~lock.id_pop_deaths.csv#  TB-in-indonesia.html  TB_notifications_WHO.csv  bcg_coverage_ID.csv  bcg_immunisation_coverage_all_countries_who.csv  bcg_immunisation_coverage_indonesia_who_cleaned.csv  contactinv_prov_21.csv  data_cleaning.ipynb  drtb_surveillance_who.csv  id_birth.csv  id_cdr.csv  id_pop_deaths.csv  id_population_deaths.csv  inc_mort_ID.csv  notifications_ID.csv  notifications_all_countries.csv  priv_pub_mix_10-22.csv  rr_who_15-22.csv  tb_incidence_mortality_indonesia_who_cleaned.csv  tb_mortality_all_countries_who_raw.csv  tb_notifications_indonesia_who_cleaned.csv  treatment_outcomes_who_12-21.csv  (+2 more)
(+129 files in other folders)
