[project]
name = "tb_incubator"
version = "0.1.0"
dependencies = [
    "summerepi2",
    "estival[nevergrad,pymc]",
    "ipykernel",
    "ipywidgets",
    "nbformat"
]

[tool.setuptools]
packages = ["tb_incubator"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"tb_incubator.data" = ["data/**/*.csv", "data/**/*.json"]

[tool.black]
line-length = 100
